REI integration fixes.